@@ -12,6 +12,6 @@ MODULE global_version
   !
   SAVE
   !
-  CHARACTER (LEN=6) :: version_number = '1.0'
+  CHARACTER (LEN=6) :: version_number = '1.05'
   !
 END MODULE global_version
